Source/JavaScriptCore/wtf/Uint8Array.h
@@ -36,7 +36,7 @@ class ArrayBuffer;
 class Uint8Array : public IntegralTypedArrayBase<unsigned char> {
 public:
     static inline PassRefPtr<Uint8Array> create(unsigned length);
-    static inline PassRefPtr<Uint8Array> create(unsigned char* array, unsigned length);
+    static inline PassRefPtr<Uint8Array> create(const unsigned char* array, unsigned length);
     static inline PassRefPtr<Uint8Array> create(PassRefPtr<ArrayBuffer>, unsigned byteOffset, unsigned length);
 
     // Can’t use "using" here due to a bug in the RVCT compiler.
@@ -62,7 +62,7 @@ PassRefPtr<Uint8Array> Uint8Array::create(unsigned length)
     return TypedArrayBase<unsigned char>::create<Uint8Array>(length);
 }
 
-PassRefPtr<Uint8Array> Uint8Array::create(unsigned char* array, unsigned length)
+PassRefPtr<Uint8Array> Uint8Array::create(const unsigned char* array, unsigned length)
 {
     return TypedArrayBase<unsigned char>::create<Uint8Array>(array, length);
 }
